--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
       </div>  
     </header>
-    <nav class="container-fluid p-5 text-center"">
+    <nav class="container-fluid p-5 text-center">
       <div class="container">
         <h1>Welcome to Personal Website of Kurbanbaev Dilmurod</h1>
     </div>
