--- a/contacts.html
+++ b/contacts.html
@@ -50,9 +50,9 @@
       </nav>
     <main class="container mt-4 text-center">
         <br><br><br><br>
-        <h1>telegram:  https://t.me/DIMdesigner<br>
-            telephone:  +998 95 076 75 71<br>
-            mail:   johnbestial@gmial.com<br>
+        <h1>telegram: <a href="https://t.me/DIMdesigner" alt="telegram page">https://t.me/DIMdesigner</a><br>
+            telephone: +998 95 076 75 71<br>
+            mail: johnbestial@gmial.com</h1><br>
         <br><br><br><br><br><br>
     </main>
     <footer class="com-foot">
