--- a/contacts.html
+++ b/contacts.html
@@ -45,12 +45,12 @@
     </header>
     <nav class="container-fluid bg-light p-3 text-center">
         <div class="container">
-          <h1>Here you can see some contacts related to me</h1>
+          <h2>Here you can see some contacts related to me</h2>
         </div>
       </nav>
     <main class="container mt-4 text-center">
         <br><br><br><br>
-        <h1>telegram: <a href="https://t.me/DIMdesigner" alt="telegram page">https://t.me/DIMdesigner</a><br>
+        <h1>telegram: <a href="https://t.me/DIMdesigner" rel="telegram">https://t.me/DIMdesigner</a><br>
             telephone: +998 95 076 75 71<br>
             mail: johnbestial@gmial.com</h1><br>
         <br><br><br><br><br><br>
