--- a/gallery.html
+++ b/gallery.html
@@ -53,7 +53,7 @@
       <div id="heading"></div>
       <div id="gallery" class="row row-cols-md-3"></div>
 
-      <!---Modal --->
+      <!-- Modal -->
       <div class="modal fade bg-dark" id="myModal">
         <div class="modal-dialog">
           <div class="modal-content bd-info">
@@ -89,12 +89,12 @@
                   </button>
                 </div>
 
-              <!---End Carousel --->
+              <!-- End Carousel -->
             </div>
 
             <!-- Modal footer -->
             <div class="modal-footer">
-              <h4><img src="img/Dimlogo1.png" style="width:100px"></h4>
+              <img src="img/Dimlogo1.png" alt="logo" class="logo-size">
             </div>
 
           </div>
