--- a/portfolio.html
+++ b/portfolio.html
@@ -48,15 +48,15 @@
         <h3>On the page: Graphic desig, UI / UX design, Video edit work</h3>
       </div>
       </nav>
-    <main class="container" class="con-main">
-      <div class="container container-expand-sm text-center" class="port-rad">  
+    <main class="container">
+      <div class="container container-expand-sm text-center">  
           <div class="container" ><br>
-            <img src="img/port.jpg" class="img-size">
-            <img src="img/port1.jpg" class="img-size1">
+            <img src="img/port.jpg" alt="portfolio" class="img-size">
+            <img src="img/port1.jpg" alt="portfolio" class="img-size1">
           </div>
           <div>
-            <img src="img/port2.jpeg" class="img-size2">
-            <img src="img/port3.jpg" class="img-size3">
+            <img src="img/port2.jpeg" alt="portfolio" class="img-size2">
+            <img src="img/port3.jpg" alt="portfolio" class="img-size3">
           </div>
       </div>
     </main><br><br><br>
