--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col-md-10 mx-auto">
                 <div class="row">
                     <section class="col-md-4">
-                        <img src="img/image.jpg" alt="Profile Photo">    
+                        <h2><img src="img/image.jpg" alt="Profile Photo"></h2>
                     </section>
                     <section class="col-md-8">
                         <p class="name">learner of coding. Kurbanbaev Dilmurod</p>
